--- a/MvvmTools/Views/SelectFileDialog.xaml
+++ b/MvvmTools/Views/SelectFileDialog.xaml
@@ -4,10 +4,66 @@
                          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                          xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.10.0"
-                         d:DesignHeight="300"
-                         d:DesignWidth="300"
+                         xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
+                         Title="Select File - MVVM Tools"
+                         Width="600"
+                         Height="300"
+                         FontFamily="Microsoft Sans Serif"
+                         WindowStartupLocation="CenterScreen"
+                         d:DataContext="{d:DesignInstance viewModels:SelectFileDialogViewModel}"
                          mc:Ignorable="d">
-    <Grid>
-        <ListView />
+    <Grid Margin="5,5,5,0">
+        <Grid.Resources>
+            <Style x:Key="LeftAlignedHeaderStyle" TargetType="GridViewColumnHeader">
+                <Setter Property="HorizontalContentAlignment" Value="Left" />
+                <Setter Property="Margin" Value="3,1" />
+            </Style>
+        </Grid.Resources>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <ListView x:Name="MyListView"
+                  ItemsSource="{Binding Documents}"
+                  Loaded="MyListView_OnLoaded"
+                  SelectedValue="{Binding SelectedDocument}"
+                  SelectionChanged="MyListView_OnSelectionChanged">
+            <ListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn DisplayMemberBinding="{Binding ProjectItem.Name}"
+                                        Header="File"
+                                        HeaderContainerStyle="{StaticResource LeftAlignedHeaderStyle}" />
+                        <GridViewColumn DisplayMemberBinding="{Binding Type.Class}"
+                                        Header="Class"
+                                        HeaderContainerStyle="{StaticResource LeftAlignedHeaderStyle}" />
+                        <GridViewColumn DisplayMemberBinding="{Binding ProjectItem.ContainingProject.Name}"
+                                        Header="Project"
+                                        HeaderContainerStyle="{StaticResource LeftAlignedHeaderStyle}" />
+                        <GridViewColumn DisplayMemberBinding="{Binding RelativeNamespace}"
+                                        Header="Namespace"
+                                        HeaderContainerStyle="{StaticResource LeftAlignedHeaderStyle}" />
+                    </GridView.Columns>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <StackPanel Grid.Row="1"
+                    Margin="0,10,5,10"
+                    HorizontalAlignment="Right"
+                    Orientation="Horizontal">
+            <Button x:Name="OkButton"
+                    Width="75"
+                    Click="OkButton_OnClick"
+                    Content="_OK"
+                    IsDefault="True"
+                    Padding="0,5" />
+            <Button x:Name="CancelButton"
+                    Width="75"
+                    Margin="8,0,0,0"
+                    Click="CancelButton_OnClick"
+                    Content="Cancel"
+                    Padding="0,5" />
+        </StackPanel>
     </Grid>
 </platformUi:DialogWindow>
