--- a/MvvmTools/Views/OptionsUserControl.xaml
+++ b/MvvmTools/Views/OptionsUserControl.xaml
@@ -2,7 +2,6 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:MvvmTools.Views"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
              d:DataContext="{d:DesignInstance viewModels:OptionsViewModel,
@@ -10,43 +9,99 @@
              d:DesignHeight="300"
              d:DesignWidth="300"
              mc:Ignorable="d">
-    <Grid>
-        <Grid.Resources>
-            <Style x:Key="HeaderStyle" TargetType="TextBlock" />
-        </Grid.Resources>
-
+    <UserControl.Resources>
+        <SolidColorBrush x:Key="AccentBrush" Color="#008BDE" />
+        <Style TargetType="{x:Type GroupBox}">
+            <Setter Property="BorderBrush" Value="{StaticResource AccentBrush}" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="Padding" Value="0,5" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type GroupBox}">
+                        <Grid SnapsToDevicePixels="True">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <ContentPresenter Margin="0,0,0,3"
+                                              ContentSource="Header"
+                                              RecognizesAccessKey="True"
+                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                              TextBlock.Foreground="{TemplateBinding BorderBrush}" />
+                            <Rectangle Height="1"
+                                       Margin="0,0,0,1"
+                                       VerticalAlignment="Bottom"
+                                       Stroke="{TemplateBinding BorderBrush}" />
+                            <Rectangle Height="1"
+                                       VerticalAlignment="Bottom"
+                                       Opacity="0.5"
+                                       Stroke="{TemplateBinding BorderBrush}" />
+                            <ContentPresenter Grid.Row="1"
+                                              Margin="{TemplateBinding Padding}"
+                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+    <Grid Margin="5">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <GroupBox BorderThickness="3"
-                  Header=" Switch To View / ViewModel "
-                  Padding="8,10,10,8">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
+        <TextBlock Margin="0,0,0,3"
+                   FontSize="16"
+                   FontWeight="SemiBold"
+                   Text="MVVM Tools" />
+        <TextBlock Margin="0,0,0,5"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Bottom"
+                   FontSize="10"
+                   Text="By Chris Bordeman" />
+        <Rectangle Height="1"
+                   Margin="0,0,0,1"
+                   HorizontalAlignment="Stretch"
+                   VerticalAlignment="Bottom"
+                   Stroke="Black" />
+        <Rectangle Height="1"
+                   HorizontalAlignment="Stretch"
+                   VerticalAlignment="Bottom"
+                   Stroke="Silver" />
 
-                <TextBlock Margin="0,0,5,5"
-                           VerticalAlignment="Center"
-                           Text="When there are multiple possibilities:" />
-                <ComboBox Grid.Column="1"
-                          Margin="0,0,0,5"
-                          DisplayMemberPath="Description"
-                          ItemsSource="{Binding GoToViewOrViewModelOptions}"
-                          SelectedValue="{Binding SelectedGoToViewOrViewModelOption}"
-                          SelectedValuePath="Value" />
-            </Grid>
-        </GroupBox>
+        <Grid Grid.Row="2" Margin="0,15,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <GroupBox Header="Switch To View / ViewModel">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Margin="0,0,5,5"
+                               VerticalAlignment="Center"
+                               Text="When there are multiple possibilities:" />
+                    <ComboBox Grid.Column="1"
+                              Margin="0,0,0,5"
+                              DisplayMemberPath="Description"
+                              ItemsSource="{Binding GoToViewOrViewModelOptions}"
+                              SelectedValue="{Binding SelectedGoToViewOrViewModelOption}"
+                              SelectedValuePath="Value" />
+                </Grid>
+            </GroupBox>
+        </Grid>
     </Grid>
 </UserControl>
