--- a/MvvmTools/Views/OptionsUserControl.xaml
+++ b/MvvmTools/Views/OptionsUserControl.xaml
@@ -8,6 +8,7 @@
                                               IsDesignTimeCreatable=False}"
              d:DesignHeight="300"
              d:DesignWidth="300"
+             x:ClassModifier="internal"
              mc:Ignorable="d">
     <UserControl.Resources>
         <SolidColorBrush x:Key="AccentBrush" Color="#008BDE" />
