--- a/MvvmTools.Views/Views/SelectFileDialog.xaml
+++ b/MvvmTools.Views/Views/SelectFileDialog.xaml
@@ -1,16 +1,16 @@
-﻿<platformUi:DialogWindow x:Class="MvvmTools.Views.SelectFileDialog"
+﻿<platformUi:DialogWindow x:Class="MvvmTools.Core.Views.SelectFileDialog"
                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                          xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.10.0"
-                         xmlns:viewModels="clr-namespace:MvvmTools.ViewModels"
+                         xmlns:viewModels1="clr-namespace:MvvmTools.Core.ViewModels"
                          Title="Select File - MVVM Tools"
                          Width="600"
                          Height="300"
                          FontFamily="Microsoft Sans Serif"
                          WindowStartupLocation="CenterScreen"
-                         d:DataContext="{d:DesignInstance viewModels:SelectFileDialogViewModel}"
+                         d:DataContext="{d:DesignInstance viewModels1:SelectFileDialogViewModel}"
                          mc:Ignorable="d">
     <Grid Margin="5,5,5,0">
         <Grid.Resources>
