--- a/MvvmTools.Views/Views/ProjectItemDescriptorDialog.xaml
+++ b/MvvmTools.Views/Views/ProjectItemDescriptorDialog.xaml
@@ -4,8 +4,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:MvvmTools.Core.Views"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
+             Width="500"
+             d:DataContext="{d:DesignInstance viewModels:ProjectItemDescriptorDialogViewModel}"
              d:DesignHeight="300"
-             d:DesignWidth="300"
              mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -16,5 +18,76 @@
 
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid />
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+
+        <TextBlock Margin="0,0,5,5" Text="Project:" />
+        <ComboBox Grid.Column="1"
+                  Grid.ColumnSpan="2"
+                  Margin="0,0,0,5"
+                  DisplayMemberPath="Name"
+                  ItemsSource="{Binding Projects}"
+                  SelectedValue="{Binding ProjectIdentifier}"
+                  SelectedValuePath="ProjectIdentifier" />
+
+        <TextBlock Grid.Row="1"
+                   Margin="0,0,5,5"
+                   Text="Folder:" />
+        <TextBox Grid.Row="1"
+                 Grid.Column="1"
+                 Grid.ColumnSpan="2"
+                 Text="{Binding PathOffProject}" />
+        <TextBlock Grid.Row="2"
+                   Grid.Column="1"
+                   Grid.ColumnSpan="2"
+                   Margin="0,1,0,5"
+                   FontSize="9"
+                   Text="Indicate a nested folder with backslashes, e.g.: SampleFolder\Views."
+                   TextWrapping="WrapWithOverflow" />
+
+        <TextBlock Grid.Row="3"
+                   Margin="0,0,5,5"
+                   Text="Namespace:" />
+        <TextBox Grid.Row="3"
+                 Grid.Column="1"
+                 Grid.ColumnSpan="2"
+                 Text="{Binding Namespace}" />
+        <TextBlock Grid.Row="4"
+                   Grid.Column="1"
+                   Grid.ColumnSpan="2"
+                   Margin="0,1,0,5"
+                   FontSize="9"
+                   Text="If starts with a dot, will be relative to the project's default namespace, e.g.: .Module.Views."
+                   TextWrapping="WrapWithOverflow" />
+
+        <TextBlock Grid.Row="5"
+                   Margin="0,0,5,0"
+                   Text="Append View Type:" />
+        <CheckBox Grid.Row="5"
+                  Grid.Column="1"
+                  Margin="0,2,8,0"
+                  IsChecked="{Binding AppendViewType}" />
+        <TextBlock Grid.Row="5"
+                   Grid.Column="2"
+                   Grid.ColumnSpan="2"
+                   Margin="0,2,0,0"
+                   VerticalAlignment="Center"
+                   FontSize="9"
+                   Text="If checked, a subfolder will be created for each view type."
+                   TextWrapping="WrapWithOverflow" />
+    </Grid>
 </UserControl>
