--- a/MvvmTools.Views/Styles/GroupBox.xaml
+++ b/MvvmTools.Views/Styles/GroupBox.xaml
@@ -1,15 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!--  Found this color series at https://www.pinterest.com/pin/495114552761811960/  -->
-    <SolidColorBrush x:Key="GroupLvl1AccentBrush" Color="#0C0636" />
-    <SolidColorBrush x:Key="GroupLvl2AccentBrush" Color="#095169" />
-    <SolidColorBrush x:Key="GroupLvl3AccentBrush" Color="#059b9a" />
-    <SolidColorBrush x:Key="GroupLvl4AccentBrush" Color="#53ba83" />
+    <SolidColorBrush x:Key="GroupLvl1AccentBrush" Color="#095169" />
+    <SolidColorBrush x:Key="GroupLvl2AccentBrush" Color="#0C0636" />
 
     <Style TargetType="{x:Type GroupBox}">
         <Setter Property="BorderBrush" Value="{StaticResource GroupLvl1AccentBrush}" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="Padding" Value="0,5,0,0" />
+        <Setter Property="Padding" Value="5" />
+        <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type GroupBox}">
@@ -18,6 +17,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
+
                         <ContentPresenter Margin="0,0,0,3"
                                           ContentSource="Header"
                                           RecognizesAccessKey="True"
@@ -31,6 +31,9 @@
                                    VerticalAlignment="Bottom"
                                    Opacity="0.5"
                                    Stroke="{TemplateBinding BorderBrush}" />
+                        <Border Grid.Row="1"
+                                Background="{TemplateBinding BorderBrush}"
+                                Opacity="0.04" />
                         <ContentPresenter Grid.Row="1"
                                           Margin="{TemplateBinding Padding}"
                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
