Fixed bug where Options page sometimes would lock up in busy state after adding or unloading a project.

--- a/MvvmTools.Views/Styles/Validation.xaml
+++ b/MvvmTools.Views/Styles/Validation.xaml
@@ -2,13 +2,6 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity">
-    <!--<Storyboard x:Key="SlideInError">
-        <DoubleAnimation Duration="0:0:0.6"
-                         Storyboard.TargetName="ErrorMessageElement"
-                         Storyboard.TargetProperty="(FrameworkElement.Height)"
-                         To="Nan" />
-    </Storyboard>-->
-
     <Style x:Key="MyErrorTemplate" TargetType="Control">
         <Setter Property="Validation.ErrorTemplate">
             <Setter.Value>
@@ -68,11 +61,11 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Style.Triggers>
+        <!--<Style.Triggers>
             <Trigger Property="Validation.HasError" Value="true">
                 <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}" />
             </Trigger>
-        </Style.Triggers>
+        </Style.Triggers>-->
     </Style>
     <Style BasedOn="{StaticResource MyErrorTemplate}" TargetType="TextBox" />
     <Style BasedOn="{StaticResource MyErrorTemplate}" TargetType="CheckBox" />
