--- a/MvvmTools.Views/Views/OptionsUserControl.xaml
+++ b/MvvmTools.Views/Views/OptionsUserControl.xaml
@@ -73,8 +73,6 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
@@ -90,10 +88,20 @@
                                       ItemsSource="{Binding GoToViewOrViewModelOptions}"
                                       SelectedValue="{Binding SelectedGoToViewOrViewModelOption}"
                                       SelectedValuePath="Value" />
+
+                            <TextBlock Grid.Row="1"
+                                       Margin="0,5,5,0"
+                                       VerticalAlignment="Center"
+                                       Text="Search Entire Solution:" />
+                            <CheckBox Grid.Row="1"
+                                      Grid.Column="1"
+                                      Margin="0,5,0,0"
+                                      VerticalAlignment="Center"
+                                      IsChecked="{Binding GoToViewOrViewModelSearchSolution}" />
                         </Grid>
                     </GroupBox>
 
-                    <!--  Row 1 contains the the view suffixes.  --><!--
+                    <!--  Row 1 contains the the view suffixes.  -->
                     <GroupBox Grid.Row="1"
                               Margin="0,15,0,0"
                               Header="View Suffixes">
@@ -104,7 +112,7 @@
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
 
-                            --><!--  View Suffixes  --><!--
+                            <!--  View Suffixes  -->
                             <TextBlock Grid.Row="0"
                                        Margin="0,0,5,0"
                                        VerticalAlignment="Top"
@@ -112,7 +120,7 @@
                             <DataGrid x:Name="ViewSuffixesDataGrid"
                                       Grid.Row="0"
                                       Grid.Column="1"
-                                      Height="100"
+                                      Height="110"
                                       AutoGenerateColumns="False"
                                       CanUserAddRows="False"
                                       CanUserDeleteRows="False"
@@ -162,7 +170,7 @@
                         </Grid>
                     </GroupBox>
 
-                    --><!--  Row 2 contains the solution and projects location options.  --><!--
+                    <!--  Row 2 contains the solution and projects location options.  -->
                     <GroupBox Grid.Row="2"
                               Margin="0,15,0,0"
                               Header="Solution and Project Options">
@@ -190,15 +198,15 @@
                                                            Converter={StaticResource NullToCollapsedConverter}}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
-                                        <DockPanel >
+                                        <DockPanel>
                                             <TextBlock Margin="4,3"
                                                        HorizontalAlignment="Left"
                                                        VerticalAlignment="Center"
                                                        DockPanel.Dock="Right"
                                                        Text="{Binding ProjectModel.TypeDescription}" />
                                             <TextBlock Margin="4,3"
-                                                       VerticalAlignment="Center"
                                                        HorizontalAlignment="Left"
+                                                       VerticalAlignment="Center"
                                                        DockPanel.Dock="Left"
                                                        FontWeight="SemiBold"
                                                        Text="{Binding ProjectModel.Name}" />
@@ -236,7 +244,7 @@
                                 <views:ProjectOptionsUserControl DataContext="{Binding SelectedProjectOption}" />
                             </ContentControl>
                         </Grid>
-                    </GroupBox>-->
+                    </GroupBox>
 
                 </Grid>
             </ScrollViewer>
