Working on implementing settings in go to v/vm.

--- a/MvvmTools.Views/Converters/Converters.xaml
+++ b/MvvmTools.Views/Converters/Converters.xaml
@@ -12,5 +12,6 @@
     <local:FalseToVisibleConverter x:Key="FalseToVisibleConverter" />
     <local:BoolInvertedConverter x:Key="BoolInvertedConverter" />
     <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+    <local:ProjectDisplayNameConverter x:Key="ProjectDisplayNameConverter" />
 
 </ResourceDictionary>
